# Gkeys

./: .gitignore  README.md  build-out.txt  gradlew  install-apk.bat  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/keystore/: gkeys-dev.keystore
app/src/main/: AndroidManifest.xml
app/src/main/assets/: NOTICE-AOSP-LatinIME.txt  en_words.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/drawable/: ai_bar_icon_btn_bg.xml  ai_bar_shell_bg.xml  ai_bar_shimmer_sweep.xml  ai_mic_bg.xml  ai_mic_bg_active.xml  ai_mic_bg_processing.xml  btn_pill_bg.xml  clipboard_card_bg.xml  clipboard_pill_bg.xml  clipboard_pin_label_bg.xml  clipboard_prompt_input_bg.xml  ic_ai_mic.xml  ic_ai_mic_active.xml  ic_back_arrow.xml  ic_backspace_close.xml  ic_cancel_recording.xml  ic_chevron_down.xml  ic_chevron_forward.xml  ic_chevron_up.xml  ic_clear_all.xml  ic_clipboard_toolbar.xml  ic_delete_forward.xml  ic_dialpad.xml  ic_drag_handle.xml  ic_ghostwriter.xml  ic_ghostwriter_hand.xml  ic_gkeys_mark.xml  ic_gkeys_mark_zoomed.xml  ic_keyboard_grid.xml  ic_launcher_foreground.xml  ic_live_speech.xml  ic_longpress_emoji.xml  ic_mic.xml  ic_mic_active.xml  ic_mic_white.xml  ic_polish.xml  ic_quill.xml  ic_select_all.xml  ic_settings.xml  ic_undo.xml  (+30 more)
app/src/main/res/layout/: activity_settings.xml  clipboard_folder_picker.xml  clipboard_overlay.xml  clipboard_text_prompt.xml  ghostwriter_overlay.xml  item_ai_bar_order_drag.xml  item_ai_bar_order_row.xml  item_clipboard.xml  keyboard_view.xml  settings_panel_ai.xml  settings_panel_ai_models.xml  voice_bubble.xml  (+4 more)
(+105 files in other folders)
